cabal-version: 2.2
name:
  arraylist
version:
  0.1.0.0
synopsis:
  Memory-efficient ArrayList implementation
description:
  An ArrayList that carries information about the amount of data in it
  that is actually used, and tries to keep space usage to a minimum.
homepage:
  https://github.com/chessai/arraylist
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  andrewthad
maintainer:
  chessai1996@gmail.com
copyright:
  copyright (c) 2018 andrewthad
category:
  Data
build-type:
  Simple
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    ArrayList
  build-depends:
      base >=4.7 && < 4.13
    , primitive >= 0.7 && < 0.8
    , primitive-addr >= 0.1 && < 0.2
    , initialize >= 0.1.1 && < 0.2
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
      base
    , arraylist
    , tasty
    , tasty-smallcheck
    , smallcheck
    , primitive
    , hashable
    , MonadRandom
  default-language:
    Haskell2010
